<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/setting_pic"
    tools:context=".profile.SettingsFragment">

    <TextView
        android:id="@+id/profile_pic_lbl"
        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/profile_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_profile_pic"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/img_default_pic"
        android:fitsSystemWindows="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_pic_lbl" />

    <LinearLayout
        android:id="@+id/textsLinear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_profile_pic">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/settings_user_name"
            style="@style/TextInputLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/user_name"
                android:inputType="text"
                android:textColor="?colorOnSecondary" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/settings_cigs_day"
            style="@style/TextInputLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="12sp"
                android:hint="@string/cigarettes_gram_per_week"
                android:inputType="number"
                android:textColor="?colorOnSecondary" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/settings_years_smoked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/years_of_smoking"
                android:inputType="numberDecimal"
                android:textColor="?colorOnSecondary" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/settings_cigs_per_pack"
            style="@style/TextInputLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/years_smoked">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Cigarettes Per Pack"
                android:inputType="number"
                android:textColor="?colorOnSecondary" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/settings_price_pack"
            style="@style/TextInputLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/price_editText"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:ems="10"
                android:textSize="15sp"
                android:hint="@string/price_per_pack_gram"
                android:inputType="numberDecimal"
                android:textColor="?colorOnSecondary" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/buttons_linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textsLinear">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/settings_update"
            style="@style/ButtonDesign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/update"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/settings_logout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textsLinear" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/settings_logout"
            style="@style/ButtonDesign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textsLinear" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settings_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        style="@style/ButtonDesign"
        android:text="@string/delete_account"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttons_linear" />

</androidx.constraintlayout.widget.ConstraintLayout>