<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_sunny"
    tools:context=".profile.CreateProfileActivity" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="60sp"
        style="@style/text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fill_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/text"
        android:text="Fill in below fields"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_profile_pic"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:src="@drawable/img_default_pic"
        android:fitsSystemWindows="true"
        app:layout_constraintBottom_toTopOf="@+id/user_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fill_in" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_name"
        style="@style/TextInputLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/years_smoked"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/full_name"
            android:inputType="text"
            android:textColor="@color/teal_700" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/years_smoked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextInputLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Years Smoked"
            android:inputType="numberDecimal"
            android:textColor="?colorOnSecondary" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cigs_per_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/years_smoked">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="12sp"
            android:hint="@string/cigarettes_per_week"
            android:inputType="number"
            android:textColor="?colorOnSecondary" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cigs_per_pack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cigs_per_day">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/cigarettes_per_pack"
            android:inputType="number"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/price_per_pack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cigs_per_pack">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="15sp"
            android:hint="@string/price_per_pack"
            android:inputType="numberDecimal"
            android:textColor="@color/teal_200" />

    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/first_time_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        style="@style/ButtonDesign"
        android:text="Continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price_per_pack" />





</androidx.constraintlayout.widget.ConstraintLayout>